# single-neuron

./: CMakeLists.txt  main.cpp  main_training.cpp
